# AppDemoJNI

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/vkozhemi/appdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vkozhemi/appdemo/: AppDemoApplication.kt
app/src/main/java/com/vkozhemi/appdemo/data/: ImagesRepository.kt
app/src/main/java/com/vkozhemi/appdemo/di/: AppModule.kt
app/src/main/java/com/vkozhemi/appdemo/ui/: MainActivity.kt
app/src/main/java/com/vkozhemi/appdemo/ui/fragments/: BlurFragment.kt  InvertFragment.kt  PickFragment.kt  SaveFragment.kt
app/src/main/java/com/vkozhemi/appdemo/viewmodel/: ImagesViewModel.kt
app/src/main/res/layout/: activity_main.xml  fragment_blur.xml  fragment_invert.xml  fragment_pick.xml  fragment_save.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vkozhemi/appdemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle.kts
mylibrary/src/androidTest/java/com/vkozhemi/mylibrary/: ExampleInstrumentedTest.kt
mylibrary/src/main/cpp/: CMakeLists.txt
mylibrary/src/main/cpp/filters/: filters.cpp  filters.h
mylibrary/src/main/cpp/jni/: jni_bridge.cpp
mylibrary/src/main/java/com/vkozhemi/mylibrary/: NativeFilters.kt  Utility.kt
mylibrary/src/test/java/com/vkozhemi/mylibrary/: ExampleUnitTest.kt
